--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,4 +51,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/tru" />
+
+    <Button
+        android:id="@+id/btnNhan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Nhan" />
 </LinearLayout>
